--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -37,6 +37,8 @@ Style/AndOr:
   Enabled: false
 Style/DefWithParentheses:
   Enabled: false
+Style/SafeNavigation:
+  Enabled: false
 Style/FrozenStringLiteralComment:
   EnforcedStyle: never
 
