--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -39,6 +39,8 @@ Style/DefWithParentheses:
   Enabled: false
 Style/SafeNavigation:
   Enabled: false
+Style/SymbolArray:
+  Enabled: false
 Style/FrozenStringLiteralComment:
   EnforcedStyle: never
 
