Changed migrations, tables, associations, models, controllers and routes to user for simplicity

--- a/test/fixtures/coffee_shops.yml
+++ b/test/fixtures/coffee_shops.yml
@@ -3,9 +3,9 @@
 one:
   name: MyString
   avatar: MyText
-  owner: one
+  user: one
 
 two:
   name: MyString
   avatar: MyText
-  owner: two
+  user: two
